# tkp

./: .gitignore  Cargo.toml  Justfile  README.md  README_2.md  install.sh
.github/workflows/: release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  tkp-highlight.js
docs/src/api/: complete.md  keywords.md
docs/src/builtins/: conversion.md  datetime.md  file-io.md  format.md  http.md  io.md  json.md  math.md  regex.md  system.md
docs/src/getting-started/: hello-world.md  installation.md  learn-toki-pona.md  learn.md  repl.md
docs/src/reference/: array-methods.md  arrays.md  closures.md  control-flow.md  enums.md  error-handling.md  functions.md  hashmap.md  modules.md  pattern-matching.md  string-methods.md  structs.md  tuples.md  types.md  variables.md
docs/src/tooling/: architecture.md  cli.md  token-analysis.md  vscode.md
editors/vscode/: .gitignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: tkp.tmLanguage.json
examples/: even_odd.tkp  factorial.tkp  fibonacci.tkp  sum.tkp  toki.tkp
spec/: SPEC.md
src/: ast.rs  codegen.rs  interpreter.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  typechecker.rs
src/builtins/: io.rs  math.rs  string.rs  system.rs
tests/: integration.rs
web/: index.html  tkp.js  tkp_bg.wasm
