[package]
name = "tkp"
version = "0.1.1"
edition = "2024"
description = "Minimalist Programming Simplicity"
repository = "https://github.com/skorotkiewicz/tkp"
license = "MIT"

[[bin]]
name = "tkp"
path = "src/main.rs"

[lib]
name = "tkp"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []
native = ["reqwest"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["wasmbind"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking"], optional = true }
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
